--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>preguntas frecuentes</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -35,21 +36,19 @@
     <section id="preguntas">
         <h1>Preguntas Frecuentes</h1>
         <h3>Para cualquier consulta completa los siguientes casilleros</h3>
-
-        <form label>nombre</label> <br>
-            <input type="text" /> <br>
-            <label>apellido</label> <br>
-            <input type="text" /> <br>
-            <label>email</label> <br>
-            <input type="text"> <br>
-            <label>consulta</label> <br>
-            <input type="text"> <br>
-            <input type="submit">
-        </form>
-    </section>
+    <section> <br><br>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div><br>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
     <footer>
         <h5>Telefono: 2622467203</h5>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
