agregando bootstrap a todas las paginas y animaciones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1>TODO MOTOS</h1>
+        <h6>TODO MOTOS</h6>
     </header>
     <nav>
         <ul>
@@ -61,7 +61,7 @@
                 <h3 class="grid_texto"> kawasaki </h3>
             </div>
             <div class="grid_hijo grid_hijo3">
-                <img src="https://publimotos.com/images/2020/junio/18-junio/kawasaki-ktr/kawasaki-04.jpg" alt="motos">
+                <img src="https://image.winudf.com/v2/image1/Y29tLm1lbWVuZy5Nb3RvY3Jvc3MuRGlydEJpa2VzLkthd2FzYWtpTW90b2Nyb3Nzd2FsbHBhcGVyX3NjcmVlbl83XzE1NTE2MTU2MDBfMDY1/screen-7.jpg?fakeurl=1&type=.jpg" alt="motos">
                 <h3 class="grid_texto"> kawasaki </h3>
     </section>
     <div class="clearfix"></div>
