--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>todomotos - incio</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
@@ -34,14 +35,7 @@
             </li>
         </ul>
     </nav>
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </nav>
+
     <div class="clearfix"></div>
 
     <section id="content">
@@ -61,19 +55,31 @@
                 <h3 class="grid_texto"> kawasaki </h3>
             </div>
             <div class="grid_hijo grid_hijo3">
-                <img src="https://image.winudf.com/v2/image1/Y29tLm1lbWVuZy5Nb3RvY3Jvc3MuRGlydEJpa2VzLkthd2FzYWtpTW90b2Nyb3Nzd2FsbHBhcGVyX3NjcmVlbl83XzE1NTE2MTU2MDBfMDY1/screen-7.jpg?fakeurl=1&type=.jpg" alt="motos">
+                <img src="https://image.winudf.com/v2/image1/Y29tLm1lbWVuZy5Nb3RvY3Jvc3MuRGlydEJpa2VzLkthd2FzYWtpTW90b2Nyb3Nzd2FsbHBhcGVyX3NjcmVlbl83XzE1NTE2MTU2MDBfMDY1/screen-7.jpg?fakeurl=1&type=.jpg"
+                    alt="motos">
                 <h3 class="grid_texto"> kawasaki </h3>
     </section>
     <div class="clearfix"></div>
-    <h3>Seguinos en:</h3>
-    <p> Twitter Faceook Instagram</p>
-
-    <div class="clearfix"></div>
-
-    <footer>
-        <h5>Telefono: 2622467203</h5>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="contenedor">
+        <div class="caja1">
+            <h4> FINANCIACION </h4>
+            <P>Todo Motos te ofrece la financiación que mas se adapta a vos para subirte hoy a la moto que estas
+                buscando. Gracias a nuestra experiencia, cada vez más clientes nos eligen para obtener su moto.</P>
+        </div>
+        <div class="caja2">
+            <h4>GESTORIA</h4>
+            <p>Todo Motos pone a tu disposición su departamento de gestoría para brindarte la tranquilidad que necesitas al momento de la compra de tu Nueva Moto. Consultanos!</p>
+        </div>
+        <div class="caja3">
+            <h4>SERVICIO TECNICO</h4>
+            <p>Contamos con modernos talleres equipados con la última tecnología en herramientas y equipos de trabajo,
+                espacios funcionales, organizados y limpios y mano de obra especializada.</p>
+        </div>
+    </div>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
