--- a/ofertas.html
+++ b/ofertas.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>ofertas</title>
     <link rel="stylesheet" href="estilos.css">
 
@@ -13,7 +14,7 @@
 
 <body>
     <header>
-        <h1>TODO MOTOS</h1>
+        <h6>TODO MOTOS</h6>
     </header>
     <nav>
         <ul>
@@ -34,12 +35,19 @@
             </li>
         </ul>
     </nav>
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
     <div class="clearfix"></div>
 
     <section class="seccion">
         <h1 class="seccion_titulo"> Modelos en rebaja </h1>
-        <div class="grid">
+        <div class="gridd">
             <div class="grid_hijo grid_hijo1">
                 <img src="https://www.cuidamostumoto.com/sites/default/files/kawasaki-z125-2021.jpg" alt="imagen1">
                 <h3 class="grid_texto"> kawasaki 1 </h3>
@@ -72,7 +80,9 @@
     <footer>
         <h5>Telefono: 2622467203</h5>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
