--- a/servicios.html
+++ b/servicios.html
@@ -5,34 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Servicios</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
     <header>
-        <h1>TODO MOTOS</h1>
+        <h6>TODO MOTOS</h6>
     </header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">inicio</a>
-                </li>
-                <li>
-                    <a href="ofertas.html">ofertas</a>
-                </li>
-                <li>
-                    <a href="servicios.html">Servicios</a>
-                </li>
-                <li>
-                    <a href="donde-estamos.html">donde estamos</a>
-                </li>
-                <li>
-                    <a href="preguntas-frecuentes.html">preguntas frecuentes</a>
-                </li>
-            </ul>
-        </nav>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html">inicio</a>
+            </li>
+            <li>
+                <a href="ofertas.html">ofertas</a>
+            </li>
+            <li>
+                <a href="servicios.html">Servicios</a>
+            </li>
+            <li>
+                <a href="donde-estamos.html">donde estamos</a>
+            </li>
+            <li>
+                <a href="preguntas-frecuentes.html">preguntas frecuentes</a>
+            </li>
+        </ul>
+    </nav>
 
     <div class="clearfix"></div>
 
@@ -46,11 +47,15 @@
             <li>Acesoramiento</li>
         </ul>
     </section>
-    <iframe width="700" height="350" src="https://www.youtube.com/embed/DUrVWnrdN5c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="700" height="350" src="https://www.youtube.com/embed/DUrVWnrdN5c" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
     <footer>
         <h5>Telefono: 2622467203</h5>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
