--- a/donde-estamos.html
+++ b/donde-estamos.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Motos, kawasaki, servicio, ofertas, Argentina, motocross">
+    <meta name="description" content="Concesionario oficial kawasaki. Eligi el modelo que te guste al mejor precio!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>donde estamos</title>
+    <title>Todomotos - donde estamos</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
