--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Motos, kawasaki, servicio, ofertas, Argentina, motocross">
+    <meta name="description" content="Concesionario oficial kawasaki. Eligi el modelo que te guste al mejor precio!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>todomotos - incio</title>
+    <title>Todomotos - incio</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -68,7 +70,8 @@
         </div>
         <div class="caja2">
             <h4>GESTORIA</h4>
-            <p>Todo Motos pone a tu disposición su departamento de gestoría para brindarte la tranquilidad que necesitas al momento de la compra de tu Nueva Moto. Consultanos!</p>
+            <p>Todo Motos pone a tu disposición su departamento de gestoría para brindarte la tranquilidad que necesitas
+                al momento de la compra de tu Nueva Moto. Consultanos!</p>
         </div>
         <div class="caja3">
             <h4>SERVICIO TECNICO</h4>
@@ -76,7 +79,7 @@
                 espacios funcionales, organizados y limpios y mano de obra especializada.</p>
         </div>
     </div>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
