--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                 espacios funcionales, organizados y limpios y mano de obra especializada.</p>
         </div>
     </div>
-
+    <div class="clearfix"></div>
+<footer>
+<h5>TELEFONO 2622467203 </h5>
+<P>infoTodoMotos@gmail.com</P>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
